cluster_outs/IGCSim-336223.out
  File "generateIGCCodonsimulation.py", line 286
    test.write_log()'''
                      ^
SyntaxError: EOF while scanning triple-quoted string literal
